style/style.css
/* devtube.html Styling */

body {
	margin: 50px;
	background: #141e30;
}

#container {
	max-height: 1080px;
	width: 100%;
}
#upper_section {
	height: 500px;
	display: flex;
	justify-content: space-evenly;
}
#lower_section {
	/* display: none; */
	/* justify-content: space-evenly; */
	height: 500px;
	/* padding: 10px; */
}
#ytplayer {
	height: 480px;
	margin: 5px;
	width: 70%;
	border-radius: 5px;

	/* Temporary Placeholder Details Styling */
	display: flex;
	justify-content: center;
	text-align: center;
}

#ytplayer iframe {
	border: none;
	border-radius: 10px;
}
#playlist {
	height: 480px;
	margin: 5px;
	width: 30%;
	overflow-y: scroll;
}

#timerCounter {
	height: 150px;
	border: #666 solid 1px;
	margin: 2px;

	/* Temporary Placeholder Details Styling */
	display: flex;
	justify-content: center;
	text-align: center;
}

#sessions {
	height: 90px;
	border: #666 1px solid;
	margin: 2px;

	/* Temporary Placeholder Details Styling */
	display: flex;
	justify-content: center;
	text-align: center;
}

#button {
	margin: 5px;
	padding: 5px;
	text-align: center;
}

#button {
	position: fixed;
	top: 10px;
	right: 10px;
	padding: 10px 15px;
	border: none;
	border-radius: 5px;
	background-color: #040f0f;
	color: white;
	cursor: pointer;
	font-size: 0.8em;
}

#button:hover {
	background-color: #d2d1d3;
}

body.night-mode {
	background-color: #000;
	color: aliceblue;
}

#login {
	max-width: 450px;
	display: block;
}

#signin {
	border: #666 solid 1px;
	text-align: center;
	padding: 5px;
	width: 50%;
	text-decoration: none;
	color: #666;
}

.inputs {
	margin: 10px;
}

#bod {
	margin: auto;
	display: block;
	max-width: 400px;
}
#loginContainer {
	max-width: 400px;
	color: aliceblue;
}

#devtube {
	display: none;
}

#welcome {
	display: block;
	border-radius: 5px;
	padding: 10px;
	margin: 10px;
	box-shadow: 0px 0px 15px #666;
	text-align: center;
	font-family: "BioRhyme", serif;
}

.menuBar {
	box-shadow: 0px 0px 0px 1px #666;
	border-radius: 25px;
	height: fit-content;
	display: inline-flex;
	background-color: rgba(0, 0, 0, 0.4);
	-webkit-backdrop-filter: blur(10px);
	backdrop-filter: blur(10px);
	align-items: center;
	padding: 0 10px;
	margin: 0 0 0px 200px;
}

.menuBar li {
	list-style: none;
	color: white;
	font-family: sans-serif;
	font-weight: bold;
	padding: 12px 16px;
	margin: 0 8px;
	position: relative;
	cursor: pointer;
	white-space: nowrap;
}

.menuBar li:hover {
	background: linear-gradient(to bottom, #e8edec, #d2d1d3);
	box-shadow: 0px 3px 20px 0px black;
	transform: scale(1.5);
	color: #00539cff;
	border-radius: 25px;
}

#intro {
	display: flex;
	justify-content: center;
	margin-top: 40px;
}

#devtube h1 a {
	font-family: "Raleway", sans-serif;
	text-decoration: none;
	color: #666;

	/* Experimental */
	font-size: 70px;
	font-weight: 600;
	background-image: linear-gradient(to left, #553c9a, #b393d3);
	color: transparent;
	background-clip: text;
	-webkit-background-clip: text;
}

#fom {
	display: block;
}

.form-group {
	margin-top: 15px;
}

.form-group i{
color: #333;
}

.form-group{
	margin: 15px 40px;
	background: #919191;
	padding: 10px;
	border-radius: 10px;
	border: 1px solid #666;
}
.form-group input{
	padding: 10px;
	background: transparent;
	border: none;
	width: 80%;
}

.form-group input::placeholder{
	color: #000;
}

.btns {
	text-align: center;
	width: 80%;
	cursor: pointer;
	border-radius: 10px;
	padding: 8px;
	margin: 10px;
	border: 1px solid #666;
	background: #b5d6d6;
}

.btns:hover {
	background: #a8c9c9;
}

.bottom-text a {
	text-decoration: none;
	color: #b393d3;
}

#signin-redirect {
	display: none;
	color: aliceblue;
	border-radius: 5px;
	padding: 10px;
	margin: 10px;
	border: 1px solid #333;
	text-align: center;
	font-family: "BioRhyme", serif;
	max-width: 400px;
}

#have-account {
	font-family: "BioRhyme", serif;
}

#remove-signup {
	padding: 10px;
	border-radius: 5px;
	background: #b5d6d6;
	cursor: pointer;
	border: 1px solid #333;
}

body p button {
	cursor: pointer;
}
#remove-signup:hover {
	background: #a8c9c9;
}

#fomu {
	margin: 20px;
	display: flex;
}

#fomu label {
	margin: 0 5px 0 0;
}

#search {
	margin: 0, 20px, 0, 20px;
	border-radius: 15px;
	border: 1px solid #666;
	width: 100%;
	max-height: 30px;
	background: #a8c9c9;
	font-family: "BioRhyme", serif;
	text-align: center;
}

#search:hover {
	background: #fff;
}
#res li a {
	display: flex;
	border-bottom: 1px #666 solid;
	margin: 5px 0 10px 0;
	text-decoration: none;
	color: #ffffff91;
	padding: 0 0 6px 0;
	height: 60px;
	font-size: 20px;
	overflow: hidden;
	text-overflow: ellipsis;
	max-width: 500px;
}

#res li a:hover {
	color: #fff;
}

#res li {
	list-style: none;
	margin: 0 15px 0 0;
	border-radius: 10px;
}

#playlist::-webkit-scrollbar {
	width: 5px; /* width of the entire scrollbar */
}

#playlist::-webkit-scrollbar-track {
	background: #b5d6d6;
	border-radius: 20px; /* color of the tracking area */
	display: none;
}

#playlist::-webkit-scrollbar-thumb {
	background-color: #666; /* color of the scroll thumb */
	border-radius: 20px; /* roundness of the scroll thumb */
}

.search-btn {
	margin-left: 5px;
	background: none;
	border: none;
	cursor: pointer;
}

/* Kujaribu vitu sasa */

#holder .we {
	margin-top: 50px;
	font-family: "Gochi Hand", cursive;
	color: #a8c9c9;
	font-size: 30px;
}

#holder .de {
	font-family: "Gochi Hand", cursive;
	color: #a8c9c9;
	font-size: 100px;
	margin: 0;
}

#about {
	color: #a8c9c9;
	font-family: 'Noto Sans Mono', monospace;
	font-size: 17px;
	padding: 15px;
	box-shadow: 0px 0px 15px #666;
	
}

#holder h4 {
	font-family: "Cutive Mono", monospace;
	color: #a8c9c9;
	font-size: 30px;
}

#ebuTuone {
	display: flex;
}

